--- a/demo-app/pom.xml
+++ b/demo-app/pom.xml
@@ -14,6 +14,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <sonar.java.source>1.8</sonar.java.source>
+    <sonar.login>${env.SONAR_TOKEN}</sonar.login>
     <sonar.projectKey>demo-app</sonar.projectKey>
   </properties>
 
